force-app/main/default/objects/Product2/fields/Deployment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Batch__c</fullName>
    <label>Deployment Batch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>