force-app/main/default/objects/Product2/fields/Product_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Health_Status__c</fullName>
    <label>Product Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Missing Code</fullName>
            </value>
            <value>
                <fullName>Missing Price</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>