force-app/main/default/objects/Product2/fields/Product_Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Release_Notes__c</fullName>
    <label>Product Release Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>